--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,6 +34,33 @@ a:focus {
 .img-responsive-overwrite {
   margin: 0 auto;
 }
+#modal-content {
+  width: 70%;
+  margin: 0;
+  padding: 20px 40px;
+  border: 10px solid #778492;
+  background: #f5f5f5;
+  position: fixed;
+  display: none;
+  z-index: 2;
+}
+#modal-overlay {
+  z-index: 1;
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.form {
+  margin: 0;
+  padding: 10px 0;
+}
+.formbtn {
+  margin: 0 !important;
+}
 .btn,
 a.btn {
   -webkit-transition: all 0.4s ease-in-out;
