--- a/assets/less/base.less
+++ b/assets/less/base.less
@@ -34,6 +34,37 @@ a {
     margin: 0 auto;
 }
 
+#modal-content{
+	width:70%;
+	margin:0;
+	padding:20px 40px;
+	border: 10px solid @color;
+	background: @smoky-white;
+	position:fixed;
+	display:none;
+	z-index:2;
+}
+
+#modal-overlay{
+	z-index:1;
+	display:none;
+	position:fixed;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+	background-color:rgba(0,0,0,0.50);
+}
+
+.form {
+    margin:0;
+	padding:10px 0;
+}
+
+.formbtn {
+    margin:0 !important;
+}
+
 .btn, a.btn {
     .transition (all 0.4s ease-in-out);
     padding: 8px 16px;
