--- a/assets/less/base.less
+++ b/assets/less/base.less
@@ -35,9 +35,9 @@ a {
 }
 
 #modal-content{
-	width:50%;
+	width:100%;
 	margin:0;
-	padding:20px 40px;
+	padding:20px;
 	border: 10px solid @color;
 	background: @smoky-white;
 	position:fixed;
