--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -35,9 +35,9 @@ a:focus {
   margin: 0 auto;
 }
 #modal-content {
-  width: 50%;
+  width: 100%;
   margin: 0;
-  padding: 20px 40px;
+  padding: 20px;
   border: 10px solid #778492;
   background: #f5f5f5;
   position: fixed;
